# metagraph

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  AUTHORS  CMakeLists.txt  COPYRIGHT  Dockerfile  Makefile  README  README.md  SRA.ipynb  analysis.ipynb  count_kmers.py  graph_growth.ipynb  growth_analysis.ipynb  package.json  refseq.ipynb  vendor.yml
metagraph/: .clang-format  .dockerignore  CMakeLists.txt  CMakeListsHelpers.txt  CMakeListsKMC.txt.in  CMakeListsSSW.txt.in  DatabaseCli.cpp  FindJemalloc.cmake  FindTcmalloc.cmake  Findzstd.cmake  IDatabase.hpp  IDatabaseImpl.cpp  Makefile  MetaGraphDefinitions.cmake.in  MockDatabase.cpp  MockDatabase.hpp  Models.hpp  OpenMP.txt  RocksdbImpl.cpp  TestDatabase.cpp  annotate.cpp  annotate.hpp  annotate_bloom_filter.cpp  annotate_bloom_filter.hpp  annotate_color_compressed.cpp  annotate_color_compressed.hpp  annotate_color_compressed_fast.cpp  annotate_color_compressed_fast.hpp  annotate_column_compressed.cpp  annotate_column_compressed.hpp  annotate_column_compressed_fast.cpp  annotate_column_compressed_fast.hpp  annotate_k2.cpp  annotate_k2.hpp  annotate_row_compressed.cpp  annotate_row_compressed.hpp  annotated_dbg.cpp  annotated_dbg.hpp  annotation.hpp  annotation_main.cpp  (+55 more)
metagraph/api/: Status.md  metagraph.hpp
metagraph/api/python/: .gitignore  Makefile  README.rst  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
metagraph/benchmarks/: bench_int_vector_algorithm.cpp  bench_vector_algorithm.cpp  bench_vectors.cpp  benchmark_graph_helpers.cpp  benchmark_graph_helpers.hpp  benchmark_matrix.cpp  benchmark_query.cpp  method_constructors.hpp
metagraph/benchmarks/annotation/: bench_annotation.cpp
metagraph/benchmarks/bit_vectors/: CMakeLists.txt  bench_bit_vectors.cpp
metagraph/benchmarks/common/: CMakeLists.txt  benchmark_chunked_wait_queue.cpp  benchmark_elias_fano.cpp  benchmark_file_merger.cpp  benchmark_sequence_io.cpp
metagraph/benchmarks/graph/: bench_boss.cpp  benchmark_bit_expansion.cpp
metagraph/benchmarks/int_vector_buffer/: CMakeLists.txt  bench_int_vector_buffer.cpp
metagraph/docker/: Dockerfile  Dockerfile_bin  Dockerfile_dev_env  Makefile  README.md
metagraph/docs/: Makefile  PREFETCH_AGENT_HANDOFF.md  requirements.txt  update_docs.sh
metagraph/docs/source/: api.rst  conf.py  faq.rst  framework.rst  framework.rst_  getting_started.rst  index.rst  installation.rst  metagraph_server.rst  python_api.rst  quick_start.rst  resources.rst  sequence_assembly.rst  sequence_search.rst  troubleshooting.rst  tutorial.rst  workflows.rst
metagraph/examples/: README.md
metagraph/examples/ExternalProject/: CMakeLists.txt  README.md
metagraph/examples/data/: test_DNA_query.fa  test_DNA_sequences.fa  test_Protein_query.fa  test_Protein_sequences.fa
metagraph/examples/src/: basic_query.cpp
metagraph/examples/subdirectory/: CMakeLists.txt  README.md
metagraph/experiments/: README.md  benchmark_vector_size.py  data_generation.cpp  data_generation.hpp  kmer_distributions.py  large_index_scripts.md  main.cpp  method_constructors.hpp  plot_brwt.py  plotly_plots.ipynb  plots.py  run_benchmarks.py
metagraph/experiments/lossless_dbg/: .gitignore  CMakeLists.txt  README.md  Snakefile  broken_sdsl.cpp  compressed_reads.hpp  config.yaml  configuration.hpp  cxx-prettyprint.hpp  decode_enabler.hpp  dense_hashmap.hpp  dynamic_incoming_table.hpp  dynamic_path_database.hpp  dynamic_routing_table.hpp  exit_barrier.hpp  graph_patch.hpp  graph_preprocessor.hpp  graph_statistics.hpp  incoming_table.hpp  main.cpp  path_database.hpp  path_database_baseline.cpp  (+26 more)
metagraph/external-libraries/: README
metagraph/integration_tests/: base.py  helpers.py  install_test_environment.sh  main.py  test_align.py  test_annotate.py  test_api.py  test_assemble.py  test_augment.py  test_build.py  test_build_weighted.py  test_clean.py  test_query.py  test_taxonomy.py  test_transform_anno.py
metagraph/interfaces/: dbg_succinct.i
metagraph/lossless_dbg/: human_chromosome_10_sample.fasta  main.cpp
metagraph/scripts/: bench_query_prefetch.py  bundle_static_libs.sh  createdb.sh  createtables.sql  experiments_filtering.sh  filtering.sh  gfa_merger.py  kmc_to_contigs.sh  kmc_to_contigs_2step.sh  kraken2_tax_comparison.py  kraken_2_metagraph.py  log_stats.sh  ncbi_parallel.py  plot_brwt.py  plot_file_sizes.ipynb  plot_query_bench.ipynb  plot_query_bench_by_anno_mode.ipynb  plot_superkmer_stats_colors.py  plot_superkmer_stats_kmers.py  rename_labels.sh  run_superkmer_stats.cpp  superkmer_stats.ipynb  taxonomy_validator.py  test.sh  test.t  test_server.sh  testdb.sql  tests.sh  trimming.sh  unit_tests_parallel.sh
metagraph/src/: config.cpp  config.hpp  diff.cpp  main.cpp  metagraph.hpp
metagraph/tests/: test_all.cpp  test_annotated_dbg.cpp  test_annotated_dbg_extensions.cpp  test_annotation.cpp  test_annotation_BRWT.cpp  test_annotation_bin_rel_wt_sdsl.cpp  test_annotation_column.cpp  test_annotation_column_fast.cpp  test_annotation_row.cpp  test_bin_rel_wt.cpp  test_bit_vector.cpp  test_bitmap.cpp  test_bounded_priority_queue.cpp  test_color_annotation_fast.cpp  test_colored_dbg.cpp  test_construct.cpp  test_construct_128.cpp  test_construct_256.cpp  test_construct_64.cpp  test_construct_sd_64.cpp  test_dbg_hash.cpp  test_dbg_succ.cpp  test_fasta_io.cpp  test_hash_dbg.cpp  test_hash_dbg_ordered.cpp  test_helpers.hpp  test_int_vector.cpp  test_k2_annotation.cpp  test_kmc_reading.cpp  test_kmer.cpp  test_kmer_128.cpp  test_kmer_256.cpp  test_kmer_64.cpp  test_kmer_boss.cpp  test_kmer_boss_128.cpp  test_kmer_boss_256.cpp  test_kmer_boss_64.cpp  test_kmer_extractor.cpp  test_kmer_extractor_boss.cpp  test_kmer_helpers.cpp  (+15 more)
metagraph/unit_tests/: test_bit_vector.cpp  test_construct.cpp  test_datatypes.cpp  test_kmer.cpp  test_main.cpp  test_utils.cpp  test_vcf_parser.cpp  test_vcfparse.cpp  test_vcfparse.fa.fai  test_vcfparse_1.vcf  test_wavelet_tree.cpp
metagraph/workflows/: .gitignore  LICENSE  MANIFEST.in  Makefile  README.rst  requirements.txt  setup.cfg  setup.py  snakemake
(+1494 files in other folders)
